--- a/Train.ipynb
+++ b/Train.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -34,10 +34,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "New https://pypi.org/project/ultralytics/8.1.19 available 😃 Update with 'pip install -U ultralytics'\n",
+      "New https://pypi.org/project/ultralytics/8.2.75 available 😃 Update with 'pip install -U ultralytics'\n",
       "Ultralytics YOLOv8.0.141 🚀 Python-3.10.12 torch-2.0.1 CPU (Apple M2)\n",
-      "\u001b[34m\u001b[1mengine/trainer: \u001b[0mtask=detect, mode=train, model=yolov8m.pt, data=datasets/msa-base.v2i.yolov8/data.yaml, epochs=20, patience=50, batch=16, imgsz=640, save=True, save_period=-1, cache=False, device=None, workers=8, project=None, name=None, exist_ok=False, pretrained=True, optimizer=auto, verbose=True, seed=0, deterministic=True, single_cls=False, rect=False, cos_lr=False, close_mosaic=10, resume=False, amp=True, fraction=1.0, profile=False, overlap_mask=True, mask_ratio=4, dropout=0.0, val=True, split=val, save_json=False, save_hybrid=False, conf=None, iou=0.7, max_det=300, half=False, dnn=False, plots=True, source=None, show=False, save_txt=False, save_conf=False, save_crop=False, show_labels=True, show_conf=True, vid_stride=1, line_width=None, visualize=False, augment=False, agnostic_nms=False, classes=None, retina_masks=False, boxes=True, format=torchscript, keras=False, optimize=False, int8=False, dynamic=False, simplify=False, opset=None, workspace=4, nms=False, lr0=0.01, lrf=0.01, momentum=0.937, weight_decay=0.0005, warmup_epochs=3.0, warmup_momentum=0.8, warmup_bias_lr=0.1, box=7.5, cls=0.5, dfl=1.5, pose=12.0, kobj=1.0, label_smoothing=0.0, nbs=64, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, degrees=0.0, translate=0.1, scale=0.5, shear=0.0, perspective=0.0, flipud=0.0, fliplr=0.5, mosaic=1.0, mixup=0.0, copy_paste=0.0, cfg=None, tracker=botsort.yaml, save_dir=runs/detect/train\n",
-      "Overriding model.yaml nc=80 with nc=3\n",
+      "\u001b[34m\u001b[1mengine/trainer: \u001b[0mtask=detect, mode=train, model=yolov8m.pt, data=datasets/blood-aquagar-001.v1i.yolov8/data.yaml, epochs=20, patience=50, batch=16, imgsz=640, save=True, save_period=-1, cache=False, device=None, workers=8, project=None, name=None, exist_ok=False, pretrained=True, optimizer=auto, verbose=True, seed=0, deterministic=True, single_cls=False, rect=False, cos_lr=False, close_mosaic=10, resume=False, amp=True, fraction=1.0, profile=False, overlap_mask=True, mask_ratio=4, dropout=0.0, val=True, split=val, save_json=False, save_hybrid=False, conf=None, iou=0.7, max_det=300, half=False, dnn=False, plots=True, source=None, show=False, save_txt=False, save_conf=False, save_crop=False, show_labels=True, show_conf=True, vid_stride=1, line_width=None, visualize=False, augment=False, agnostic_nms=False, classes=None, retina_masks=False, boxes=True, format=torchscript, keras=False, optimize=False, int8=False, dynamic=False, simplify=False, opset=None, workspace=4, nms=False, lr0=0.01, lrf=0.01, momentum=0.937, weight_decay=0.0005, warmup_epochs=3.0, warmup_momentum=0.8, warmup_bias_lr=0.1, box=7.5, cls=0.5, dfl=1.5, pose=12.0, kobj=1.0, label_smoothing=0.0, nbs=64, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, degrees=0.0, translate=0.1, scale=0.5, shear=0.0, perspective=0.0, flipud=0.0, fliplr=0.5, mosaic=1.0, mixup=0.0, copy_paste=0.0, cfg=None, tracker=botsort.yaml, save_dir=runs/detect/train2\n",
+      "Overriding model.yaml nc=80 with nc=7\n",
       "\n",
       "                   from  n    params  module                                       arguments                     \n",
       "  0                  -1  1      1392  ultralytics.nn.modules.conv.Conv             [3, 48, 3, 2]                 \n",
@@ -62,140 +62,33 @@
       " 19                  -1  1   1327872  ultralytics.nn.modules.conv.Conv             [384, 384, 3, 2]              \n",
       " 20             [-1, 9]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
       " 21                  -1  2   4207104  ultralytics.nn.modules.block.C2f             [960, 576, 2]                 \n",
-      " 22        [15, 18, 21]  1   3777433  ultralytics.nn.modules.head.Detect           [3, [192, 384, 576]]          \n",
-      "Model summary: 295 layers, 25858057 parameters, 25858041 gradients\n",
+      " 22        [15, 18, 21]  1   3779749  ultralytics.nn.modules.head.Detect           [7, [192, 384, 576]]          \n",
+      "Model summary: 295 layers, 25860373 parameters, 25860357 gradients\n",
       "\n",
       "Transferred 469/475 items from pretrained weights\n",
-      "\u001b[34m\u001b[1mTensorBoard: \u001b[0mStart with 'tensorboard --logdir runs/detect/train', view at http://localhost:6006/\n",
-      "\u001b[34m\u001b[1mtrain: \u001b[0mScanning /Users/guillemcobos/Documents/GitHub/colony-counting-detection-yolov8/datasets/msa-base.v2i.yolov8/train/labels.cache... 105 images, 0 backgrounds, 0 corrupt: 100%|██████████| 105/105 [00:00<?, ?it/s]\n",
-      "\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/guillemcobos/Documents/GitHub/colony-counting-detection-yolov8/datasets/msa-base.v2i.yolov8/valid/labels.cache... 2 images, 0 backgrounds, 0 corrupt: 100%|██████████| 2/2 [00:00<?, ?it/s]\n",
-      "Plotting labels to runs/detect/train/labels.jpg... \n",
-      "\u001b[34m\u001b[1moptimizer:\u001b[0m AdamW(lr=0.001429, momentum=0.9) with parameter groups 77 weight(decay=0.0), 84 weight(decay=0.0005), 83 bias(decay=0.0)\n",
+      "\u001b[34m\u001b[1mTensorBoard: \u001b[0mStart with 'tensorboard --logdir runs/detect/train2', view at http://localhost:6006/\n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mScanning /Users/guillemcobos/Documents/GitHub/colony-counting-detection-yolov8/datasets/blood-aquagar-001.v1i.yolov8/train/labels... 324 images, 36 backgrounds, 0 corrupt: 100%|██████████| 324/324 [00:00<00:00, 3840.09it/s]\n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mNew cache created: /Users/guillemcobos/Documents/GitHub/colony-counting-detection-yolov8/datasets/blood-aquagar-001.v1i.yolov8/train/labels.cache\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/guillemcobos/Documents/GitHub/colony-counting-detection-yolov8/datasets/blood-aquagar-001.v1i.yolov8/valid/labels... 33 images, 0 backgrounds, 0 corrupt: 100%|██████████| 33/33 [00:00<00:00, 4486.76it/s]\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mNew cache created: /Users/guillemcobos/Documents/GitHub/colony-counting-detection-yolov8/datasets/blood-aquagar-001.v1i.yolov8/valid/labels.cache\n",
+      "Plotting labels to runs/detect/train2/labels.jpg... \n",
+      "\u001b[34m\u001b[1moptimizer:\u001b[0m AdamW(lr=0.000909, momentum=0.9) with parameter groups 77 weight(decay=0.0), 84 weight(decay=0.0005), 83 bias(decay=0.0)\n",
       "Image sizes 640 train, 640 val\n",
       "Using 0 dataloader workers\n",
-      "Logging results to \u001b[1mruns/detect/train\u001b[0m\n",
+      "Logging results to \u001b[1mruns/detect/train2\u001b[0m\n",
       "Starting training for 20 epochs...\n",
       "\n",
       "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       1/20         0G      2.033      3.069      1.181        574        640: 100%|██████████| 7/7 [03:57<00:00, 33.99s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.14it/s]\n",
-      "                   all          2        106      0.669      0.778      0.784      0.406\n",
+      "       1/20         0G      2.168      4.706      1.336        138        640:  33%|███▎      | 7/21 [05:24<10:49, 46.40s/it]\n",
       "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       2/20         0G      1.564      1.502      1.042        526        640: 100%|██████████| 7/7 [03:36<00:00, 30.89s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.03it/s]\n",
-      "                   all          2        106       0.78      0.976      0.909      0.506\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       3/20         0G      1.475       1.36      1.013        598        640: 100%|██████████| 7/7 [03:41<00:00, 31.60s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:01<00:00,  1.00s/it]\n",
-      "                   all          2        106      0.517      0.704       0.51      0.296\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       4/20         0G      1.428      1.197     0.9764        485        640: 100%|██████████| 7/7 [03:43<00:00, 31.93s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.06it/s]\n",
-      "                   all          2        106      0.832      0.829      0.909      0.548\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       5/20         0G      1.445      1.246     0.9937        260        640: 100%|██████████| 7/7 [03:36<00:00, 30.89s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.08it/s]\n",
-      "                   all          2        106      0.557      0.841      0.805      0.404\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       6/20         0G      1.452      1.153     0.9996        455        640: 100%|██████████| 7/7 [03:42<00:00, 31.75s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.17it/s]\n",
-      "                   all          2        106      0.602      0.852      0.718      0.401\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       7/20         0G      1.413      1.032     0.9761        340        640: 100%|██████████| 7/7 [03:39<00:00, 31.39s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.23it/s]\n",
-      "                   all          2        106      0.801      0.806      0.873      0.454\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       8/20         0G      1.401      1.009     0.9617        705        640: 100%|██████████| 7/7 [03:35<00:00, 30.81s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:01<00:00,  1.14s/it]\n",
-      "                   all          2        106      0.904      0.924      0.971      0.589\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "       9/20         0G      1.396     0.9546     0.9771        282        640: 100%|██████████| 7/7 [03:38<00:00, 31.24s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.16it/s]\n",
-      "                   all          2        106      0.814      0.952      0.965      0.589\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      10/20         0G      1.329     0.9089     0.9599        688        640: 100%|██████████| 7/7 [03:41<00:00, 31.58s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.20it/s]\n",
-      "                   all          2        106      0.877       0.97      0.971      0.604\n",
-      "Closing dataloader mosaic\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      11/20         0G      1.334      1.022       1.01        376        640: 100%|██████████| 7/7 [03:29<00:00, 29.90s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:01<00:00,  1.09s/it]\n",
-      "                   all          2        106      0.957      0.891      0.967      0.556\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      12/20         0G      1.342      1.145      1.002        301        640: 100%|██████████| 7/7 [03:31<00:00, 30.16s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.23it/s]\n",
-      "                   all          2        106      0.951      0.836      0.939      0.579\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      13/20         0G       1.33      0.967     0.9712        382        640: 100%|██████████| 7/7 [03:25<00:00, 29.40s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:01<00:00,  1.42s/it]\n",
-      "                   all          2        106      0.941      0.894      0.952      0.557\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      14/20         0G      1.322     0.9925       0.98        705        640: 100%|██████████| 7/7 [03:26<00:00, 29.54s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:01<00:00,  1.11s/it]\n",
-      "                   all          2        106      0.967      0.896      0.974      0.585\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      15/20         0G      1.308     0.8432     0.9698        404        640: 100%|██████████| 7/7 [03:24<00:00, 29.15s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.21it/s]\n",
-      "                   all          2        106      0.882       0.94      0.973      0.602\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      16/20         0G      1.283     0.8074     0.9764        433        640: 100%|██████████| 7/7 [03:38<00:00, 31.18s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.25it/s]\n",
-      "                   all          2        106      0.848      0.922      0.954      0.603\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      17/20         0G      1.292     0.8281     0.9658        535        640: 100%|██████████| 7/7 [03:24<00:00, 29.23s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:01<00:00,  1.29s/it]\n",
-      "                   all          2        106      0.813      0.988      0.964      0.614\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      18/20         0G      1.253      0.781     0.9659        392        640: 100%|██████████| 7/7 [03:29<00:00, 29.97s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:01<00:00,  1.24s/it]\n",
-      "                   all          2        106      0.883      0.943       0.98      0.615\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      19/20         0G       1.28     0.8299     0.9743        281        640: 100%|██████████| 7/7 [03:46<00:00, 32.43s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.13it/s]\n",
-      "                   all          2        106      0.935      0.922      0.978      0.593\n",
-      "\n",
-      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "      20/20         0G       1.26     0.8006     0.9714        190        640: 100%|██████████| 7/7 [03:36<00:00, 30.90s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.24it/s]\n",
-      "                   all          2        106      0.927      0.885      0.952      0.616\n",
-      "\n",
-      "20 epochs completed in 1.213 hours.\n",
-      "Optimizer stripped from runs/detect/train/weights/last.pt, 52.0MB\n",
-      "Optimizer stripped from runs/detect/train/weights/best.pt, 52.0MB\n",
-      "\n",
-      "Validating runs/detect/train/weights/best.pt...\n",
-      "Ultralytics YOLOv8.0.141 🚀 Python-3.10.12 torch-2.0.1 CPU (Apple M2)\n",
-      "Model summary (fused): 218 layers, 25841497 parameters, 0 gradients\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  1.38it/s]\n",
-      "                   all          2        106      0.884      0.943       0.98      0.615\n",
-      "              Bacillus          2         23      0.795          1      0.974      0.642\n",
-      "      StaphyloPositive          2         83      0.974      0.887      0.987      0.589\n",
-      "Speed: 1.0ms preprocess, 354.1ms inference, 0.0ms loss, 2.5ms postprocess per image\n",
-      "Results saved to \u001b[1mruns/detect/train\u001b[0m\n"
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "model = YOLO('yolov8m.pt')  # load a pretrained model (recommended for training)\n",
-    "model.train(data='datasets/msa-base.v2i.yolov8/data.yaml', epochs=20, imgsz=640)"
+    "model.train(data='datasets/blood-aquagar-001.v1i.yolov8/data.yaml', epochs=20, imgsz=640)"
    ]
   },
   {
